[gd_scene load_steps=2 format=3 uid="uid://dcsorq4a7hvee"]

[ext_resource type="Script" path="res://pull_simulator.gd" id="1_2xeyb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2xeyb")

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 350.0
offset_right = 171.0
offset_bottom = 373.0
text = "Weapons"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 236.0
offset_right = 171.0
offset_bottom = 259.0
text = "Characters"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 181.0
offset_top = 92.0
offset_right = 268.0
offset_bottom = 115.0
text = "Stellar Jade"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 92.0
offset_right = 402.0
offset_bottom = 115.0
text = "Simulations"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 92.0
offset_right = 123.0
offset_bottom = 115.0
text = "Pulls"

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 857.0
offset_top = 183.0
offset_right = 988.0
offset_bottom = 206.0
text = "Success Rate: 0%"

[node name="RunButton" type="Button" parent="."]
layout_mode = 0
offset_left = 857.0
offset_top = 115.0
offset_right = 983.0
offset_bottom = 146.0
text = "Run Simulation
"

[node name="AvailablePullsInput" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 44.0
offset_right = 135.063
offset_bottom = 75.0
max_value = 100000.0

[node name="AvailableCurrencyInput" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 181.0
offset_top = 44.0
offset_right = 264.063
offset_bottom = 75.0
max_value = 100000.0

[node name="SimulationRunsInput" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 44.0
offset_right = 412.063
offset_bottom = 75.0
max_value = 100000.0
value = 10000.0

[node name="FiveStarCharacterInput" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 183.0
offset_right = 135.063
offset_bottom = 214.0
max_value = 100000.0

[node name="CharacterPityInput" type="SpinBox" parent="."]
offset_left = 181.0
offset_top = 183.0
offset_right = 264.063
offset_bottom = 214.0
max_value = 100000.0

[node name="GuaranteeInput" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 183.0
offset_right = 447.0
offset_bottom = 214.0
text = "Guarantee?"

[node name="FiveStarWeaponInput" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 299.0
offset_right = 135.063
offset_bottom = 330.0
max_value = 100000.0

[node name="WeaponPityInput" type="SpinBox" parent="."]
offset_left = 181.0
offset_top = 299.0
offset_right = 264.063
offset_bottom = 330.0
max_value = 100000.0

[node name="WeaponGuaranteeInput" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 299.0
offset_right = 515.0
offset_bottom = 330.0
text = "Weapon Guarantee?"

[connection signal="pressed" from="RunButton" to="." method="_on_run_button_pressed"]
