[gd_scene load_steps=2 format=3 uid="uid://dcsorq4a7hvee"]

[ext_resource type="Script" path="res://scripts/pull_simulator.gd" id="1_dw13k"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dw13k")

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 857.0
offset_top = 271.0
offset_right = 988.0
offset_bottom = 294.0
text = "Success Rate: 0%"

[node name="RunButton" type="Button" parent="."]
layout_mode = 0
offset_left = 857.0
offset_top = 203.0
offset_right = 983.0
offset_bottom = 234.0
text = "Run Simulation
"

[node name="BannersOption" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 31.0
offset_right = 84.0
offset_bottom = 51.0
item_count = 2
popup/item_0/text = "Honkai Star Rail"
popup/item_1/text = "Wuthering Waves"
popup/item_1/id = 1

[node name="CopiesButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 317.0
offset_top = 31.0
offset_right = 433.0
offset_bottom = 62.0
item_count = 2
popup/item_0/text = "Assume E0"
popup/item_1/text = "Assume E6"
popup/item_1/id = 1

[node name="RunContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 28.0
offset_top = 154.0
offset_right = 65.0
offset_bottom = 194.0

[node name="PullsLabel" type="Label" parent="RunContainer"]
layout_mode = 2
text = "Pulls"

[node name="PullsInput" type="SpinBox" parent="RunContainer"]
layout_mode = 2
max_value = 100000.0
value = 100.0

[node name="CurrencyLabel" type="Label" parent="RunContainer"]
layout_mode = 2
text = "Stellar Jade"

[node name="CurrencyInput" type="SpinBox" parent="RunContainer"]
layout_mode = 2
max_value = 100000.0

[node name="GemsLabel" type="Label" parent="RunContainer"]
layout_mode = 2
text = "Starlight"

[node name="GemsInput" type="SpinBox" parent="RunContainer"]
layout_mode = 2
max_value = 100000.0

[node name="SimulationsLabel" type="Label" parent="RunContainer"]
layout_mode = 2
text = "Simulations"

[node name="SimulationsInput" type="SpinBox" parent="RunContainer"]
layout_mode = 2
max_value = 99999.0
value = 1000.0

[node name="CharacterContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 234.0
offset_right = 549.0
offset_bottom = 274.0

[node name="CharacterLabel" type="Label" parent="CharacterContainer"]
layout_mode = 2
text = "Characters"

[node name="CharacterInput" type="SpinBox" parent="CharacterContainer"]
layout_mode = 2
max_value = 100000.0
value = 1.0

[node name="CharacterPityLabel" type="Label" parent="CharacterContainer"]
layout_mode = 2
text = "Character Pity"

[node name="CharacterPityInput" type="SpinBox" parent="CharacterContainer"]
layout_mode = 2
max_value = 100000.0

[node name="CharGuaranteeInput" type="CheckBox" parent="CharacterContainer"]
layout_mode = 2
text = "Guarantee?"

[node name="WeaponContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 316.0
offset_right = 549.0
offset_bottom = 356.0

[node name="WeaponLabel" type="Label" parent="WeaponContainer"]
layout_mode = 2
text = "Weapons"

[node name="WeaponInput" type="SpinBox" parent="WeaponContainer"]
layout_mode = 2
max_value = 100000.0

[node name="WeaponPityLabel" type="Label" parent="WeaponContainer"]
layout_mode = 2
text = "Weapon Pity"

[node name="WeaponPityInput" type="SpinBox" parent="WeaponContainer"]
layout_mode = 2
max_value = 100000.0

[node name="WepGuaranteeInput" type="CheckBox" parent="WeaponContainer"]
layout_mode = 2
text = "Weapon Guarantee?"

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_right = 741.0
offset_bottom = 457.0

[connection signal="pressed" from="RunButton" to="." method="_on_run_button_pressed"]
[connection signal="item_selected" from="BannersOption" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="CopiesButton" to="." method="_on_copies_button_item_selected"]
